--- a/_posts/2022-1-1-drug.md
+++ b/_posts/2022-1-1-drug.md
@@ -4,6 +4,13 @@ layout: post
 title: 신년미사
 image: cenacolo.jpeg
 
+first_reading:  민수기의 말씀입니다.6,22-27
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 갈라티아서 말씀입니다.4,4-7
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  루카 2,16-21
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=2
+
 ---
 
 
