--- a/_posts/2022-1-1-drug.md
+++ b/_posts/2022-1-1-drug.md
@@ -14,7 +14,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 ---
 
 
-찬미 예수님. 제가 오늘 복음을 잊었습니다. 그래도 위로가 되는 것은 어떤 신부님이 강론 끝내고 그냥 미사를 끝내셨던 이야기가 생각이 납니다. 뭔가 이상했던 신부님이 제의방에 있던 자매님에게 어땠냐고 물으니 그 자매님은 미사가 참 좋았다고 대답했더랍니다.
+찬미 예수님. 제가 오늘 복음을 잊었습니다. 그래도 위로가 되는 것은 어떤 신부님이 강론 끝내고 그냥 미사를 끝내셨던 이야기가 생각이 납니다. 뭔가 이상했던 신부님이 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=8261&keyword=%EC%A0%9C%EC%9D%98&gubun=04">제의방</a>에 있던 자매님에게 어땠냐고 물으니 그 자매님은 미사가 참 좋았다고 대답했더랍니다.
 
 어제 마지막 날을 잘 보내셨는지요? 저는 성탄 전부터 몸이 안좋았다가 그저께부터 좋아졌습니다. 이번 성탄에는 유독 샴페인을 많이 받았습니다. 8 병이나 받았습니다. 왜 이리 신자들이 많이 주는지 모르겠지만 저야 좋았습니다. 그저께 몸이 좋아져서 샴페인을 땄습니다.
 
