--- a/_posts/2022/2022-1-1-drug.md
+++ b/_posts/2022/2022-1-1-drug.md
@@ -40,7 +40,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 만일 사제가 서품을 받고 미사를 드리지 않으면 어떨까요? 서품을 받았기 때문에 신부는 신부입니다. 그러나 좀 이상하지 않을까요? 사제는 서품을 받고 큰 은총을 나누고 봉사하면서 사는 것이 진정한 사제인 것입니다.
 
-우리는 선교사의 모습으로 살아가는지요? 성모님의 삶을 봅시다. 성모님은 천사의 메세지를 받고 성령님을 받고, 목자의 소식을 받고 그것을 마음에 잘 간직하셨습니다. 그리고 결국 성자를 낳으심으로 세상에 성령을 선물로 주셨습니다. 그리고 성모님은 예수님을 끝까지 쫓아다니셨고 예수님이 하늘로 올라가신 이후 제자들과 함께 기도를 하면서 결국 오순절에 또 성령님을 받으셨습니다.
+우리는 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=1573&keyword=%EC%84%A0%EA%B5%90%EC%82%AC&gubun=01">선교사</a>의 모습으로 살아가는지요? 성모님의 삶을 봅시다. 성모님은 천사의 메세지를 받고 성령님을 받고, 목자의 소식을 받고 그것을 마음에 잘 간직하셨습니다. 그리고 결국 성자를 낳으심으로 세상에 성령을 선물로 주셨습니다. 그리고 성모님은 예수님을 끝까지 쫓아다니셨고 예수님이 하늘로 올라가신 이후 제자들과 함께 기도를 하면서 결국 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=2555&keyword=%EC%98%A4%EC%88%9C%EC%A0%88&gubun=01">오순절</a>에 또 성령님을 받으셨습니다.
 
 새해 첫날을 보내면서 이 베품의 정신을 계송합시다. 이 은총을 나눠주고 성장해야 겠습니다. 아멘.
 
