--- a/_posts/2022/2022-1-1-drug.md
+++ b/_posts/2022/2022-1-1-drug.md
@@ -5,11 +5,11 @@ title: 신년미사
 image: cenacolo.jpeg
 
 first_reading: 민수기 6,22-27
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=104&p=6
+first_reading_link: m=1&n=104&p=6
 second_reading: 갈라티아서 4,4-7
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=155&p=4
+second_reading_link: m=2&n=155&p=4
 gospel: 루카 2,16-21
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=2
+gospel_link: m=2&n=149&p=2
 
 ---
 
