--- a/_posts/2022/2022-1-1-drug.md
+++ b/_posts/2022/2022-1-1-drug.md
@@ -18,18 +18,18 @@ gospel_link: m=2&n=149&p=2
 
 어제 마지막 날을 잘 보내셨는지요? 저는 성탄 전부터 몸이 안좋았다가 그저께부터 좋아졌습니다. 이번 성탄에는 유독 샴페인을 많이 받았습니다. 8병이나 받았습니다. 왜 이리 신자들이 많이 주는지 모르겠지만 저야 좋았습니다. 그저께 몸이 좋아져서 샴페인을 땄습니다.
 
-그 순간 머리 속을 스치는 생각이 ‘과연 내가 올 한해를 돌아보며 기뻐해야 하는가?’ 들었습니다. 그러자 울화가 치밀었습니다. 지난 2000년 동안 쌓아 온 기독교가 코로나로 많이 흔들렸습니다. 큰 타격을 받았습니다. 그것을 깨닫는 순간 울화가 치밀었던 것입니다.
+그 순간 머리 속을 스치는 생각이 '과연 내가 올 한해를 돌아보며 기뻐해야 하는가?' 들었습니다. 그러자 울화가 치밀었습니다. 지난 2000년 동안 쌓아 온 기독교가 코로나로 많이 흔들렸습니다. 큰 타격을 받았습니다. 그것을 깨닫는 순간 울화가 치밀었던 것입니다.
 
 또 다른 울화가 치밀었던 원인은 주교님도 그렇고 바티칸도 그렇고 교회가 위기에 처한 것을 인정하지 않았다는 것입니다. 그래서 우울하게 있었습니다.
 
-그러던 중 실베스터 마지막 미사 준비 중에 그리고 성체 조배를 하는 가운데 그래도 ‘기뻐해야 한다.’라는 생각이 들었습니다. 왜냐하면 그래도 신앙을 지키고 있기 때문입니다. 이것은 기뻐할 이유입니다.
+그러던 중 실베스터 마지막 미사 준비 중에 그리고 성체 조배를 하는 가운데 그래도 '기뻐해야 한다.'라는 생각이 들었습니다. 왜냐하면 그래도 신앙을 지키고 있기 때문입니다. 이것은 기뻐할 이유입니다.
 
 우리는 여행을 계속 하고 있습니다. 새해가 다가옴에 감사해야 합니다. 이 시기를 우리는 잘 건너 왔습니다. 이에 감사해야 하고 하느님을 찬미해야 합니다. 이제 우리는 새해 첫날에 성모님을 통해 다시 우리의 신앙을 반성해 봅니다. 성모님은 예수님을 잘 따랐습니다. 올 한 해 우리는 어떤 모습으로 보내게 될까요?
 
 스위스에 마약을 하는 사람들이 얼마나 많은지 아시나요? 얼마나 많은 사람들이 마약으로 죽음을 맞이하는지 아시는지요? 제가 아는 어떤 폴란드 출신 신부님은 장례식에 트라우마를 갖고 계십니다. 그 신부님이 활동했을 시절, 80-90 년대에는 한 달에 1번씩 마약으로 인해 자살 혹은 사망이 생겨 장례식을 너무 자주 치렀고 이를
 10년 넘게 겪었다고 합니다.
 
-마약 관련 다큐를 보았는데 수도 베른에 어떤 집이 있는데 그 곳에서 마약 중독자들이 마약을 받아서 마약을 투여받고 조금 쉬었다가 나간다고 합니다. 이를 보고 ‘나쁘지 않지.’라고 생각을 했었습니다.
+마약 관련 다큐를 보았는데 수도 베른에 어떤 집이 있는데 그 곳에서 마약 중독자들이 마약을 받아서 마약을 투여받고 조금 쉬었다가 나간다고 합니다. 이를 보고 '나쁘지 않지.'라고 생각을 했었습니다.
 
 제가 4년 전에 메주고리를 방문했는데 <a href="https://www.comunitacenacolo.it/official/index.php?option=com_content&view=article&id=173">체나콜로 공동체</a>가 그 곳에 있었습니다. 체나콜로 공동체는 전 세계적으로 80 개의 공동체를 갖고 있는데 2000여 명의 젊은이들이 속해있고 그 젊은이들은 과거에 마약을 했던 젊은이들입니다. 그들은 공동체 생활을 하면서 하루 종일 땀을 흘리며 일을 했습니다. 그들은 새벽 4시 30분 부터 일어나서 열심히 일을 한다고 합니다. 밤이 되면 너무 피곤해서 그냥 잠에 들어버립니다. 이를 통해 마약을 극복하고 젊은이들이 이 변화를 간증한다고 합니다. 이들이 비참한 삶을 살다가 땀을 흘려 일하고
 잘 자고 잘 먹고, 서로 위안이 되며 살아가는 것입니다. 이들 중 많은 사람들이 사제 및 수녀가 되었습니다.
