--- a/_posts/2022/2022-1-1-drug.md
+++ b/_posts/2022/2022-1-1-drug.md
@@ -11,7 +11,8 @@ second_reading: 갈라티아서 4,4-7
 second_reading_link_cbck: Gal/4
 second_reading_link: m=2&n=155&p=4
 gospel: 루카 2,16-21
-gospel_link_cbck: Lk/2
+gospel_link_de: Lukas2
+gospel_link_cbck:  Lk/2
 gospel_link: m=2&n=149&p=2
 
 ---
