--- a/_posts/2022/2022-1-1-drug.md
+++ b/_posts/2022/2022-1-1-drug.md
@@ -5,16 +5,16 @@ title: 신년미사
 image: cenacolo.jpeg
 
 first_reading: 민수기 6,22-27
-first_reading_link_cbck: Nm/6
-first_reading_link: m=1&n=104&p=6
+first_reading_link: Nm/6
+ 
 second_reading: 갈라티아서 4,4-7
  
-second_reading_link_cbck: Gal/4
-second_reading_link: m=2&n=155&p=4
+second_reading_link: Gal/4
+ 
 gospel: 루카 2,16-21
  
-gospel_link_cbck: Lk/2
-gospel_link: m=2&n=149&p=2
+gospel_link: Lk/2
+ 
 
 ---
 
